HomeTasks json, correct mistakes